--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
                 </div>
 
                 <h1 class="font-playfair title-main mb-2">Bine ați venit!</h1>
-                <p class="font-lato subtitle-main mb-5">Găsiți-vă locul la masa de sărbătoare</p>
+                <p class="font-lato subtitle-main mb-4">Găsiți-vă locul la masa de sărbătoare</p>
 
                 <div class="search-box-area">
-                    <div class="input-wrapper mb-5">
-                        <input type="text" id="searchInput" class="clean-input" placeholder="Introduceți numele de familie..." autocomplete="off">
+                    <div class="input-wrapper mb-4">
+                        <input type="text" id="searchInput" class="clean-input" placeholder="Introduceți numele..." autocomplete="off">
                         <div id="resultsContainer" class="results-dropdown"></div>
                     </div>
 
@@ -53,7 +53,7 @@
                 
                 <h2 id="groupName" class="font-playfair text-white mb-4">Familia Popescu</h2>
                 
-                <div class="table-display mb-5">
+                <div class="table-display mb-4">
                     <span class="d-block text-gold font-playfair table-label">Masa Nr.</span>
                     <span id="tableNumber" class="font-playfair big-number">15</span>
                 </div>
